Small addition to content.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
   <title>Hello Coursera!</title>
   </head>
   <body>
-  <h1>Hello Coursera</h1>
+  <h1>Hello Coursera! I'll wait until I say that it's a nice course :)</h1>
   </body>
   </html>
