--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello Coursera!</title>
+  <title>Schau dir das interaktive Menü an!</title>
+  <style>
+  /* Styles go here. */
+  header li {
+    list-style: none;
+  }
+  a:link, a:visited {
+    text-decoration: none;
+    color: black;
+    background-color: lightgreen;
+    border: 3px solid blue;
+    display: block;
+    width: 200px;
+    text-align: center;
+    margin-bottom: 2px;
+  }
+
+  a:hover {
+    background-color: darkgreen;
+    color: white;
+  }
+
+  a:active {
+    background-color: black;
+    border: 3px solid green;
+  }
+
+  </style>
   </head>
   <body>
-  <h1>Hello Coursera! I'll wait until I say that it's a nice course :)</h1>
-  </body>
+  <h1>Pseudo Class Selectors</h1>
+
+  <header>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="http://goo.gl/V0Wl6s" target="_blank">AngularJS Course</a></li>
+      <li><a href="http://www.facebook.com/CourseraWebDev" target="_blank">Facebook Fan Page</a></li>
+    </ul>
+  </header>
+
+  <section>
+    <div>DIV 1</div>
   </html>
