--- a/site/index.html
+++ b/site/index.html
@@ -31,7 +31,7 @@
   </style>
   </head>
   <body>
-  <h1>Pseudo Class Selectors</h1>
+  <h1>mein erstes interaktives Menü :)</h1>
 
   <header>
     <ul>
@@ -43,4 +43,5 @@
 
   <section>
     <div>DIV 1</div>
+  </body>
   </html>
